syntax = "proto3"; //version of the proto buffer

import "date.proto";
package system.person;
/*
Person is used to identify people across the system.
*/

message Person{
    int32 age=1;
    string first_name = 2;
    string last_name = 3;
    bytes small_pic = 4; //small pic represents a small .jpg file
    bool is_verified = 5;
    float height = 6; //height represented in cm

    repeated string phone_numbers = 7; //repeated Ã© uma forma de representar listas ou arrays

    enum Person_Certification{
        UNKOWN_CLASS=0;
        practitioner=1;
        associated=2;
        especialist=3;
        master=4;
        guilherme=5;
    }

    // It's a enum defined above
    Person_Certification certification=8;

    // People related address. Full name = Person.Address
    message Address{
        string address_line_1 = 1;
        string address_line_2 = 2;
        string zip_code = 3;
        string city = 4;
        string state = 5;
        string country = 6;
        int32 number = 7;
    }

    //List of person's addresses
    repeated Address addresses = 9;

    date.Date birthday = 10;
}

/* this is the syntex of a message in proto3.

Starts with a "Return type" message, followed by the message name given to this data. In this case, the message represents a Person in our system.

then, each field must contain a Type, followed by a name, associated to a tag, that could be ani number between 1 and 2^23 -1 except for 19000 and 19999.

repeated and other tags modify de field caracteristcs

every not specified or unknown field have a default value:
string - empty stirng
bool - false
enum = first enum value
numbers = 0
repeated = empty list
bytes = empty bytes

messages could be nested ou independent (even while at the same proto file or imported)

we can also set packages to group messages or prevent repeated names.
*/
